// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`types a basic model 1`] = `
"interface AccountSchema extends Syntax.ResultRecord {
    email: string;
    name: string;
}
export type Account<TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>;
export type <TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.RoninRecords<RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>>;
"
`;

exports[`types a model with a summary 1`] = `
"/**
 * A user account.
 */
interface AccountSchema extends Syntax.ResultRecord {
    email: string;
    name: string;
}
/**
 * A user account.
 */
export type Account<TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>;
/**
 * A user account.
 */
export type <TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.RoninRecords<RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>>;
"
`;

exports[`types a model with a link field 1`] = `
"interface PostSchema extends Syntax.ResultRecord {
    author: AccountSchema;
    title: string;
}
export type Post<TIncluding extends RONIN.Including<PostSchema> = [
]> = RONIN.ReturnBasedOnIncluding<PostSchema, TIncluding>;
export type <TIncluding extends RONIN.Including<PostSchema> = [
]> = RONIN.RoninRecords<RONIN.ReturnBasedOnIncluding<PostSchema, TIncluding>>;
"
`;

exports[`types a model with a link field that does not exist 1`] = `
"interface AccountSchema extends Syntax.ResultRecord {
    email: string;
    latestPost: unknown;
    name: string;
}
export type Account<TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>;
export type <TIncluding extends RONIN.Including<AccountSchema> = [
]> = RONIN.RoninRecords<RONIN.ReturnBasedOnIncluding<AccountSchema, TIncluding>>;
"
`;
